# sqmix-mitm

./: CMakeLists.txt  README.md
include/sqmixmitm/: Command.h  Discovery.h  DiscoveryResponder.h  Event.h  MidiControl.h  MixMitm.h  Version.h  log.h
src/: Command.cpp  Discovery.cpp  DiscoveryResponder.cpp  DiscoveryService.cpp  DiscoveryService.h  Event.cpp  Event.h  MidiControl.cpp  MitmService.cpp  MitmService.h  MixMitm.cpp  MixMitm.h  Version.cpp  log.cpp  log.h
src/tools/: discovery-responder.cpp  discovery-service.cpp  discovery.cpp  midi-control.cpp  midi.h  mitm.cpp
